<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:elevation="10dp"
        android:theme="@style/Toolbar"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/txtGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="5dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:text="Siguiente"
            android:textAllCaps="true"
            android:textColor="@color/naranja"
            android:textSize="15sp" />


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:padding="8dp"
        android:gravity="start"
        android:background="@android:color/darker_gray"
        android:text="@string/datos_de_los_ingredientes"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/edtNombreIngrediente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:textSize="13sp"
        android:background="@drawable/boton_gris_margen"
        android:padding="10dp"
        android:textColor="@color/negro"
        android:hint="@string/nombre_ingrediente"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="13sp"
        android:background="@drawable/boton_gris_margen"
        android:padding="10dp"
        android:textColor="@color/negro"
        android:hint="@string/cantidad"
        android:inputType="number" />


    <EditText
        android:id="@+id/edtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="13sp"
        android:background="@drawable/boton_gris_margen"
        android:padding="10dp"
        android:textColor="@color/negro"
        android:hint="Donde encontrara el ingrediente"
        android:inputType="textPersonName" />


    <LinearLayout
        android:id="@+id/btnSubirIngredientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/boton_naranja_completo"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/subir_ingredientes"
            android:textColor="@color/blanco"
            android:textSize="14sp"
            android:textAllCaps="true" />

    </LinearLayout>


</LinearLayout>