<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/imgsplash"
    android:gravity="center"
    android:backgroundTint="#81000000"
    android:backgroundTintMode="src_atop"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Login.Registro">

    <LinearLayout
        android:id="@+id/l"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_marginTop="115dp"
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:elevation="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/cuadro_blancoredondo"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="3dp"
            android:textColorHint="@color/negro"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/black"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="5dp"
            android:textSize="14sp"
            android:textColorHint="@android:color/black"
            android:ems="10"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/darker_gray"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginStart="6dp"
            android:textColorHint="@color/negro"
            android:layout_marginEnd="3dp"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editContrasena"
            android:hint="@string/contrase_a"
            android:layout_marginEnd="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="14sp"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/darker_gray"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginStart="6dp"
            android:textColorHint="@color/negro"
            android:layout_marginEnd="3dp"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:textSize="14sp"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/darker_gray"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="3dp"
            android:textColorHint="@color/negro"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/telefono"
            android:textSize="14sp"
            android:inputType="phone"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    </LinearLayout>



    <View
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/degradado" />


    <LinearLayout
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearIniciarSesion"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@null"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/white"
                android:text="@string/ya_tienes_una_cuenta" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:layout_marginBottom="5dp"
                android:textColor="@android:color/white"
                android:text="@string/iniciar_sesi_n" />
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearRegistrar"
            android:gravity="center"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrarse"
                android:layout_marginTop="5dp"
                android:textColor="@color/naranja"
                android:layout_marginBottom="5dp"
                android:textAllCaps="true"
                />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@null"
                android:tint="@color/naranja"
                android:layout_marginStart="10dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_flecha" />

        </LinearLayout>
        
    </LinearLayout>


</FrameLayout>