<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".menu_nuevo.FragmentsU.Menu_ConocenosU">


    <LinearLayout
        android:id="@+id/btnAndie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/boton_redondo_blanco"
        android:elevation="3dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">


        <ImageView
            android:id="@+id/imgAsesor1"
            android:layout_width="140dp"
            android:layout_height="280dp"
            android:layout_marginStart="2dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/img1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNombreAsesoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center|start"
                android:text="@string/andie_illanes"
                android:textAlignment="textStart"
                android:textColor="@color/negro"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtProfesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center|start"
                android:text="@string/andie"
                android:textAlignment="textStart"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnFedrico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/boton_redondo_blanco"
        android:elevation="3dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imgAsesor2"
            android:layout_width="140dp"
            android:layout_height="280dp"
            android:layout_marginStart="2dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/img2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNombreAsesoria2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center|start"
                android:text="@string/federico_boyselle"
                android:textAlignment="textStart"
                android:textColor="@color/negro"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtProfesion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center|start"
                android:text="@string/federico"
                android:textAlignment="textStart"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>